--- a/src/02-component-patterns/styles/styles.module.css
+++ b/src/02-component-patterns/styles/styles.module.css
@@ -41,11 +41,11 @@
 }
 
 .countLabel {
-    border-bottom: 1px solid black;
-    border-top: 1px solid black;
-    font-size: 16px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    font-size: 14px;
     height: 25px;
-    padding-top: 5px;
+    padding-top: 0px;
     text-align: center;
     width: 30px;
 }
