--- a/src/02-component-patterns/styles/styles.module.css
+++ b/src/02-component-patterns/styles/styles.module.css
@@ -1,10 +1,12 @@
 
 
 .productCard {
-    background-color: white;
+    background-color: #1E2025;
     border-radius: 15px;
-    color: black;
+    box-shadow: 0px 2px 10px rgba(0,0,0,0.15);
+    color: white;
     padding-bottom: 5px;
+    font-family: Arial, Helvetica, sans-serif;
     width: 250px;
     margin-right: 5px;
     margin-top: 5px;
@@ -23,15 +25,14 @@
     margin: 10px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
 }
 
 .buttonMinus {
     cursor: pointer;
     background-color: transparent;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 5px 0px 0px 5px;
+    color: white;
     font-size: 20px;
     width: 30px;
 }
@@ -41,11 +42,12 @@
 }
 
 .countLabel {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    font-size: 14px;
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+    color: white;
+    font-size: 16px;
     height: 25px;
-    padding-top: 0px;
+    padding-top: 5px;
     text-align: center;
     width: 30px;
 }
@@ -53,8 +55,9 @@
 .buttonAdd {
     cursor: pointer;
     background-color: transparent;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 0px 5px 5px 0px;
+    color: white;
     font-size: 20px;
     width: 30px;
 }
@@ -63,16 +66,9 @@
     background-color: rgba(0, 0, 0, 0.1);
 }
 
-.disabledD
-{
-    border-color: gray !important;
-    border-left:1px solid white !important;
-    color: gray !important;
-}
 
-.disabledI
-{
-    border-color: gray !important;
-    border-right:1px solid white !important;
-    color: gray !important;
+.disabled {
+    border-color: grey !important;
+    border-left: 1px solid white !important;
+    color: grey !important;
 }
