--- a/src/03-forms/styles/styles.css
+++ b/src/03-forms/styles/styles.css
@@ -1,32 +1,25 @@
-form 
-{
+form {
     display: flex;
     flex-direction: column;
     width: 400px;
-    align-items: center;
-    justify-content: center;
 }
 
-input, select
-{
+input, select {
     margin-top: 5px;
     outline: none;
     padding: 10px;
-    border: 2px solid transparent;
 }
 
-button
-{
+
+button {
     margin-top: 20px;
     padding: 10px;
 }
 
-span, .error-message
-{
-    color: #e11515;
+span, .error-message {
+    color: red;
 }
 
-.has-error
-{
-    border: 2px solid #e11515;
+.has-error {
+    border: 1px solid red;
 }
